Fix course forum footer layout issue
- Remove edX course forum-added left margin style
- Resolves https://github.com/gymnasium/tracker/issues/59

--- a/css/footer.css
+++ b/css/footer.css
@@ -71,6 +71,7 @@
   list-style: none url();
   padding-left: 0;
   margin-top: 0.95em;
+  margin-left: 0;
 }
 
 #contentinfo li {
